fix: justify text alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,6 +91,10 @@ h2, h3, h4, h5, h6, .toc, .nav__title {
     font-size: 0.9em;
 }
 
+.page__content p {
+    text-align: justify;
+}
+
 .social-icons .fa-instagram, .social-icons .fa-linkedin, .social-icons .fa-twitter, .social-icons .fa-twitter-square {
     color: #000;
 }
